--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   --secondary-text-color: #757575;
   --main-hover-color: #2196f3;
   --accent-color: #ffffff;
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 p,
 h1,
@@ -110,7 +110,7 @@ nav {
   transform: scaleX(0);
   transition: transform 250ms var(--timing-function);
 }
-.item.current::after{
+.item.current::after {
   transform: scaleX(1);
 }
 .item:hover::after {
@@ -181,11 +181,10 @@ nav {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   transition: background-color 250ms var(--timing-function);
-
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: #188CE8;;
+  background-color: #188ce8;
 }
 .backdrop {
   position: fixed;
@@ -352,14 +351,14 @@ nav {
 .networks {
   width: 44px;
   height: 44px;
-  background-color:inherit;
+  background-color: inherit;
   border: none;
   border-radius: 50%;
   padding: 12px;
   margin-bottom: 30px;
   fill: var(--secondary-text-color);
   transition: background-color 250ms var(--timing-function),
-  fill 250ms var(--timing-function);
+    fill 250ms var(--timing-function);
 }
 .networks:hover {
   background-color: #2196f3;
@@ -384,26 +383,25 @@ nav {
   display: flex;
   justify-content: center;
 }
+
 .icon-btn {
+  width: 170px;
+  height: 92px;
   padding: 16px 32px;
   margin-right: 30px;
   background-color: unset;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
-   transition: border-color 250ms var(--timing-function),
-  fill 250ms var(--timing-function);
+  transition: border-color 250ms var(--timing-function),
+    fill 250ms var(--timing-function);
 }
 
-.icon-btn:hover {
+.icon-btn:hover,
+.icon-btn:focus {
   fill: var(--main-hover-color);
   border-color: var(--main-hover-color);
 }
-.icon {
-  width: 106px;
-  height: 60px;
-}
-
 /*--------------------- footer-------------- */
 
 .footer {
@@ -448,7 +446,7 @@ nav {
   fill: var(--accent-color);
   margin-right: 10px;
   background: rgba(255, 255, 255, 0.1);
- transition: background-color 250ms var(--timing-function);
+  transition: background-color 250ms var(--timing-function);
 }
 
 .social-btn:hover,
@@ -496,7 +494,7 @@ nav {
   border-radius: 4px;
   cursor: pointer;
   color: var(--primary-colo);
-   transition: background-color 250ms var(--timing-function),
+  transition: background-color 250ms var(--timing-function),
     color 250ms var(--timing-function);
 }
 .serv-btn:hover,
@@ -514,6 +512,8 @@ nav {
 .example {
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.example:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -536,8 +536,8 @@ nav {
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
- transform: scaleY(0);
- transform-origin: bottom;
+  transform: scaleY(0);
+  transform-origin: bottom;
   transition: transform 250ms var(--timing-function);
 }
 .overlay-text {
@@ -554,10 +554,10 @@ nav {
   transform: scaleY(0);
   transform-origin: bottom;
   transition: transform 250ms var(--timing-function);
-
 }
+
 .overlay-link:hover .overlay-text {
- transform: scaleY(1);
+  transform: scaleY(1);
 }
 .overlay-link:hover .overlay::before {
   transform: scaleY(1);
@@ -576,5 +576,3 @@ nav {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
-
-
