--- a/css/styles.css
+++ b/css/styles.css
@@ -197,13 +197,15 @@ nav {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 1200ms var(--timing-function) ;
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal{
-  transform: translate(-50%, -50%) scale(1);
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.3);
 }
 .modal {
   position: absolute;
@@ -211,9 +213,9 @@ nav {
   left: 50%;
   width: 528px;
   height: 581px;
-  transform: translate(-50%, -50%) scale(1) rotate(360deg);
-  transition: transform 250ms var(--timing-function);
   background-color: #fff;
+  transform: translate(-50%, -50%) scale(1) rotate(360deg);
+  transition: transform 1200ms var(--timing-function);
 }
 .close-btn {
   position: absolute;
