--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ nav {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 1200ms var(--timing-function) ;
+  transition: opacity 1200ms var(--timing-function);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -419,6 +419,10 @@ nav {
   padding: 60px;
   display: flex;
 }
+.footer a:hover,
+.footer a:focus {
+  color: var(--main-hover-color);
+}
 .social {
   margin-left: 70px;
 }
@@ -507,10 +511,18 @@ nav {
   transition: background-color 250ms var(--timing-function),
     color 250ms var(--timing-function);
 }
+.serv-btn.current {
+  background-color: var(--main-hover-color);
+  color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .serv-btn:hover,
 .serv-btn:focus {
   background-color: var(--main-hover-color);
   color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ---------------------pages------------------ */
